# backend/src/main/java/com/lottery/domain/repository/CombinationSchemaRepository.java
@@ -5,5 +5,7 @@ import java.util.Optional;
 import java.util.UUID;
 
 public interface CombinationSchemaRepository {
+    CombinationSchema save(CombinationSchema schema);
+
     Optional<CombinationSchema> findById(UUID id);
 }
